force-app/main/default/objects/Book__c/fields/Book_Series__c.field-meta.xml
<CustomField>
    <fullName>Book_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book Series</label>
    <referenceTo>Book_Series__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>