force-app/main/default/objects/Book__c/fields/Publishing_House__c.field-meta.xml
<CustomField>
    <fullName>Publishing_House__c</fullName>
    <label>Publishing House</label>
    <length>50</length>
    <type>Text</type>
</CustomField>